--- a/main.html
+++ b/main.html
@@ -10,6 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form action="#" method="post">
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder="Name"><br><br>
+		<label for="phone">Phone Number:</label>
+		<input type="text" id="phone" placeholder="Phone Number"><br><br>
+		<label for="address">Address:</label>
+		<input type="text" id="address" placeholder="Address"><br><br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br><br>
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option value="labrador">Labrador</option>
+			<option value="bulldog">Bulldog</option>
+			<option value="beagle">Beagle</option>
+		</select><br><br>
+		<input type = "submit" id = "submit" value="Submit"/>
+		
+		
+		
+	</form>
+
 
 </body>
 
